# saddharma

./: .gitignore  README.md  render.yaml
src/saddharma_org/: manage.py  pyproject.toml  requirements.txt
src/saddharma_org/DEL/: about.html  base.html  cart.html  confirmation.html  contact.html  footer.html  hero_area.html  index.html  login.html  product_details.html  shop.html
src/saddharma_org/api/: serializers.py  urls.py  views.py
src/saddharma_org/core/: admin.py  models.py  urls.py  views.py
src/saddharma_org/core/migrations/: 0001_initial.py  0002_author_year.py  0003_alter_author_year.py  0004_alter_author_description_alter_author_year.py  0005_booktemp_rename_source_library_sourcelibrary_and_more.py  0006_alter_booktemp_author_name_alter_booktemp_catalog_no_and_more.py  0007_alter_booktemp_author_name_alter_booktemp_catalog_no_and_more.py  0008_book_last_modified_alter_book_approved_date_and_more.py  0009_alter_book_approved_by_alter_book_approved_date.py  0010_alter_book_language_alter_book_uploaded_by_and_more.py  0011_alter_book_category_l1_alter_book_category_l2_and_more.py  0012_book_volume.py  0013_alter_book_volume.py  0014_alter_book_category_l1_alter_book_category_l2_and_more.py  0015_comments_parent_comment_alter_comments_page.py  0016_alter_book_storage_link.py  0017_book_size.py  0018_book_view_count.py
src/saddharma_org/saddharma_org/: asgi.py  settings.py  urls.py  wsgi.py
src/saddharma_org/static/styles/: blog_styles.css  (+1 more)
src/saddharma_org/templates/: about.html  book.html  home_libraries.html  menu.html  scripts.html  slider.html
(+45 files in other folders)
