[tool.poetry]
name = "saddharma-prod"
version = "1.0.0"
description = "Buddhist Online Library"
authors = ["Janaka Peiris <janaka44@gmail.com>"]
readme = "README.md"
packages = [{include = "saddharma_org"}]

[tool.poetry.dependencies]
python = "^3.11.3"
django = "^5.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
